# my-tea-culture-app

./: .gitignore  README.md
docs/: api_and_experiments.md  architecture.md  data_dictionary.md  thesis_draft.md
tea-ai-service/: download_model.py  embed_data.py  fetch_wiki.py  main.py  pyproject.toml
tea-ai-service/data/: tea_data.json  tea_with_vectors.json
tea-culture-app/: app.js  frontend-instructions.md  package-lock.json  package.json  project-context.md  schema.sql  seed.sql
tea-culture-app/config/: db.js
tea-culture-app/controllers/: authController.js  certEnrollController.js  certificateController.js  commentController.js  contentController.js  enrollController.js  eventController.js  feedbackController.js  orderController.js  postController.js  productController.js  userController.js
tea-culture-app/middleware/: auth.js
tea-culture-app/routes/: auth.js  certEnroll.js  certificate.js  comment.js  content.js  enroll.js  event.js  feedback.js  order.js  post.js  product.js  user.js
tea-culture-app/scripts/: assignContentImages.js  showContentImages.js
tea-culture-app/services/: aiService.js  llmService.js  moderationService.js  searchService.js
tea-culture-uniapp/: App.vue  CURRENT_STATUS.md  PROJECT_DOCS.md  main.js  manifest.json  package-lock.json  package.json  pages.json  uni.scss  vite.config.js
tea-culture-uniapp/api/: index.js
tea-culture-uniapp/pages/admin/: index.vue
tea-culture-uniapp/pages/ai-chat/: index.vue
tea-culture-uniapp/store/: index.js
tea-culture-uniapp/utils/: auth.js  http.js  upload.js
(+28 files in other folders)
