[project]
name = "tea-ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.3",
    "fastapi>=0.135.1",
    "httpx[socks]>=0.28.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
